# PoubelleTankTrouble

./: .gitignore  CMakeLists.txt
src/: client.cpp  client.hpp  color.cpp  color.hpp  game.cpp  game.hpp  glad.c  glad.h  main.cpp  message.hpp  point.cpp  point.hpp  renderer.cpp  renderer.hpp  server.cpp  server.hpp  shader_tools.cpp  shader_tools.hpp  triangle.cpp  triangle.hpp
src/glad/: glad.h  glad.h:Zone.Identifier
src/shaders/: triangle.vert
src/templates/: array.hpp
